# cortex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ruff.toml
.claude/skills/bughunt/: SKILL.md
.github/workflows/: ci.yml
answer/: Dockerfile  docker-compose.yml  index.md  pyproject.toml  requirements.txt
answer/src/answer/: __init__.py  index.py  mcp_server.py  metrics.py  numbers.py  retrieve.py  service.py  settings.py  synthesize.py  verify_answer.py
answer/tests/: conftest.py  test_acl_enforcement.py  test_index_retrieve.py  test_mcp_adapter.py  test_service_ask.py  test_verify_and_metrics.py
benchmark/: README.md  index.md  pyproject.toml  requirements.txt
benchmark/src/benchmark/: __init__.py  generate.py  run.py
benchmark/tests/: test_benchmark.py
docs/: README.md  answer.md  architecture.md
docs/decisions/: 001-no-ddd-refactor.md  002-deterministic-verification.md  003-bounded-agency-worker.md  004-supervisor-and-memory.md  005-facts-layer.md  006-time-semantics.md  007-answer-layer.md  008-entity-registry.md  009-dossiers.md  010-acl.md  011-source-contract.md
docs/gbrain/: README.md  oauth-clients.md
docs/operations/: deploy.md  runbook.md
docs/pipeline/: README.md  brain-page-contract.md  clean.md  corpus.md  facts.md  fetch.md  graph.md  ops.md  slack.md
evals/: README.md  acl-config.json  golden.json  index.md  qa_golden.json  run-evals.sh  run_evals.py
examples/: run-demo.sh
examples/demo-corpus/Clients/1. Globex - won/: Quarterly Report Q1 2026 FINAL.md  meeting notes 2026-02-14.txt
examples/demo-corpus/Clients/2. Initech/: KPI metrics 2026.csv  NDA Initech.md
examples/demo-corpus/Finance/: Quarterly Report Q1 2026 (copy).md  invoice-0231.md
examples/demo-corpus/Pipeline/Evaluating/Hooli/: pitch deck.md
examples/demo-corpus/Product/: Roadmap 2026.md
examples/demo-corpus/Product/research/: benchmark study.md
examples/demo-corpus/Sales/: Strategy planning 2026.md
gbrain/: .env.example  Dockerfile  Makefile  docker-compose.yml  mcp-stdio.sh
gbrain/tailscale/: funnel.json
pipeline/: .env.example  docker-compose.yml  index.md
pipeline/clean/: Dockerfile  index.md  pyproject.toml  requirements.txt
pipeline/clean/src/clean/: __init__.py  acl.py  agents.py  claims.py  converters.py  dossiers.py  entity.py  facts.py  factstore.py  fake_llm.py  fsutil.py  llm.py  main.py  numeric.py  observability.py  ops.py  page.py  playbook.py  schemas.py  settings.py  state.py  tools.py  verify.py  versions.py  worker.py
pipeline/clean/tests/: test_acl.py  test_agents.py  test_claims.py  test_converters.py  test_dossiers.py  test_entity.py  test_facts.py  test_fake_llm.py  test_fsutil.py  test_llm.py  test_main.py  test_ops.py  test_page.py  test_playbook.py  test_settings.py  test_state.py  test_tools.py  test_verify.py  test_versions.py  test_worker.py
pipeline/corpus/: Dockerfile  index.md  pyproject.toml  requirements.txt
pipeline/corpus/src/corpus/: __init__.py  artifacts.py  cli.py  config.py  paths.py  schemas.py  taxonomy.json
pipeline/corpus/src/corpus/stages/: build_inventory.py  classify_files.py  curate_manifest.py  enumerate_files.py  trim_manifest.py
pipeline/corpus/tests/: test_artifacts.py  test_classify.py  test_cli.py  test_config.py  test_curate.py  test_enumerate_inventory.py  test_paths.py  test_schemas.py  test_trim.py
pipeline/fetch/: Dockerfile  index.md  pyproject.toml  requirements.txt
pipeline/fetch/src/: drive_fetch.py
pipeline/fetch/tests/: test_drive_fetch.py
pipeline/graph/: Dockerfile  index.md  pyproject.toml  requirements.txt
pipeline/graph/src/graph/: __init__.py  build.py  cli.py  entities.py  merges.py  normalize.py  pages.py  registry.py
pipeline/graph/tests/: test_build.py  test_cli.py  test_entities.py  test_normalize.py  test_pages.py  test_registry_merges.py
pipeline/slack/: Dockerfile  index.md  pyproject.toml
pipeline/slack/src/slackexport/: __init__.py  sync.py
pipeline/slack/tests/: test_sync.py
