[project]
name = "benchmark"
version = "0.1.0"
description = "The cortex benchmark: ground-truth corpus generator + whole-system scorer."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["benchmark"]
omit = ["tests/*"]
