[project]
name = "clean"
version = "0.1.0"
description = "LLM cleaning stage: raw file mirror -> Markdown knowledge-base pages."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["clean"]
omit = ["tests/*"]
