[project]
name = "corpus"
version = "0.2.0"
description = "Reproducible curation of a document corpus (signal vs noise, categories, allowlist, inventory)."
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["corpus"]
omit = ["tests/*"]
