[project]
name = "slackexport"
version = "0.1.0"
description = "Second source connector: a Slack workspace export becomes the pipeline's inventory."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["slackexport"]
omit = ["tests/*"]
